Camino only - Bug 374503: Clear status bar after loading all secondary resources. r=mento sr=pink