camino/src/browser/BrowserWrapper.h
@@ -143,11 +143,12 @@ class nsIArray;
     // array of popupevents that have been blocked. We can use them to reconstruct the popups
     // later. If nil, no sites are blocked. Cleared after each new page.
   nsIMutableArray*          mBlockedPopups;
-  NSMutableArray*           mFeedList;        // list of feeds found on page
+  NSMutableArray*           mFeedList;         // list of feeds found on page
 
-  CHBrowserView*            mBrowserView;     // retained
+  CHBrowserView*            mBrowserView;      // retained
   ToolTip*                  mToolTip;
-  NSMutableArray*           mStatusStrings;   // current status bar messages, STRONG
+  NSMutableArray*           mStatusStrings;    // current status bar messages, STRONG
+  NSMutableSet*             mLoadingResources; // page resources currently loading, STRONG
 
   IBOutlet NSView*          mBlockedPopupView;   // loaded on demand, can be nil, STRONG
   IBOutlet RolloverImageButton* mBlockedPopupCloseButton;
@@ -230,6 +231,8 @@ class nsIArray;
 // CHBrowserListener messages
 - (void)onLoadingStarted;
 - (void)onLoadingCompleted:(BOOL)succeeded;
+- (void)onResourceLoadingStarted:(NSNumber*)resourceIdentifier;
+- (void)onResourceLoadingCompleted:(NSNumber*)resourceIdentifier;
 - (void)onProgressChange64:(long long)currentBytes outOf:(long long)maxBytes;
 - (void)onProgressChange:(long)currentBytes outOf:(long)maxBytes;
 - (void)onLocationChange:(NSString*)urlSpec isNewPage:(BOOL)newPage requestSucceeded:(BOOL)requestOK;
