camino/src/formfill/KeychainService.mm
@@ -1122,6 +1122,14 @@ KeychainFormSubmitObserver::Notify(nsIDOMHTMLFormElement* formNode, nsIDOMWindow
 {
 }
 
+- (void)onResourceLoadingStarted:(NSNumber*)resourceIdentifier
+{
+}
+
+- (void)onResourceLoadingCompleted:(NSNumber*)resourceIdentifier
+{
+}
+
 - (void)onProgressChange:(long)currentBytes outOf:(long)maxBytes
 {
 }
